fix tab-slide-box white page

--- a/www/app/apps/docApprove/PO/p4_po_doc_10002.html
+++ b/www/app/apps/docApprove/PO/p4_po_doc_10002.html
@@ -4,7 +4,7 @@
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">
         {{PO_ORDER_NUMBER}} הזמנות רכש
       </div>
