--- a/www/app/apps/docApprove/RQ/p4_rq_doc_20002.html
+++ b/www/app/apps/docApprove/RQ/p4_rq_doc_20002.html
@@ -5,7 +5,7 @@
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">
         דרישת רכש {{REQ_NUM}}
       </div>
