--- a/www/app/apps/docApprove/HR/p4_doc_242.html
+++ b/www/app/apps/docApprove/HR/p4_doc_242.html
@@ -5,7 +5,7 @@
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">טופס השלמת שעות
         <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
