--- a/www/app/apps/docApprove/HR/p4_doc_806.html
+++ b/www/app/apps/docApprove/HR/p4_doc_806.html
@@ -1,11 +1,11 @@
 <ion-view class="feed-entries-view">
 
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">טופס דיווח עבודה מהבית
         <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
@@ -60,8 +60,8 @@
             </ion-scroll>
         </ion-slide>
         -->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
+        <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1;">
@@ -97,9 +97,9 @@
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
-    <!-- Refresh to get the new posts -->
+        <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+            <!-- Refresh to get the new posts -->
 
             <label class="item item-thumbnail-left">
               <img src="img/employees/worker.png">
@@ -110,11 +110,11 @@
               <h2 class="text-right pele_rtl">מחלקה : {{DEPARTMENT}}</h2>
               <h2 class="text-right pele_rtl">חטיבה : {{SECTOR}}</h2>
             </label>
-      <ul class="list">
-        <!---------------------------- 242 --------------------------------->
-        <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
+            <ul class="list">
+              <!---------------------------- 242 --------------------------------->
+              <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
 
-          <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.EFFECTIVE_DATE)">
+                <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.EFFECTIVE_DATE)">
             <i class="icon ion-android-calendar"></i>
             <p class="float-right">{{detail.EFFECTIVE_DATE}}</p>
             <span>יום: {{detail.ATTRIBUTE1}}</span>
@@ -123,7 +123,7 @@
               </span>
           <i ng-class="isGroupShown(detail.EFFECTIVE_DATE) ? 'icon-expand' : 'icon-collapse'"></i>
           </a>
-          <label class="item" ng-show="isGroupShown(detail.EFFECTIVE_DATE)">
+                <label class="item" ng-show="isGroupShown(detail.EFFECTIVE_DATE)">
             <div class="row">
               <div class="col col-30 text-right pele_rtl">שעת התחלה : </div>
               <div class="col col-78 text-right pele_rtl">{{detail.ATTRIBUTE2}}</div>
@@ -150,11 +150,11 @@
               </div>
             </div>
           </label>
-        </div>
-      </ul>
-     </ion-scroll>
-    </ion-slide>
-   </ion-slide-box>
+              </div>
+            </ul>
+          </ion-scroll>
+        </ion-slide>
+      </ion-slide-box>
 
   </ion-content>
   <!-- Footer Actions -->
