--- a/www/app/apps/docApprove/HR/p4_doc_807.html
+++ b/www/app/apps/docApprove/HR/p4_doc_807.html
@@ -1,11 +1,11 @@
 <ion-view class="feed-entries-view">
 
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">טופס דיווחי היעדרות
         <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
@@ -26,7 +26,7 @@
           </ion-scroll>
         </div>
       </div>
-      <ion-slide-box show-pager="false" on-slide-changed="slideHasChanged($index)" >
+      <ion-slide-box show-pager="false" on-slide-changed="slideHasChanged($index)">
         <!-- -->
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
@@ -57,8 +57,8 @@
             </ion-scroll>
         </ion-slide>
         -->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
+        <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
               <a class="item item-divider item-icon-right pele-item-icon-left" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1;">
@@ -94,9 +94,9 @@
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
-    <!-- Refresh to get the new posts -->
+        <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
+            <!-- Refresh to get the new posts -->
 
             <label class="item item-thumbnail-left">
               <img src="img/employees/worker.png">
@@ -107,8 +107,8 @@
               <h2 class="text-right pele_rtl">מחלקה : {{DEPARTMENT}}</h2>
               <h2 class="text-right pele_rtl">חטיבה : {{SECTOR}}</h2>
             </label>
-      <ul class="list">
-        <label class="item" dir="RTL">
+            <ul class="list">
+              <label class="item" dir="RTL">
           <!-- Holly Day -->
           <div class="row">
             <div class="col text-right pele_rtl">יתרת שעות חופשה</div>
@@ -117,14 +117,14 @@
             <div class="col text-right pele_rtl" style="color:red;">{{HOLIDAY_BALANCE}}</div>
           </div>
         </label>
-        <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
-            <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.ATTRIBUTE2)">
+              <div ng-repeat="detail in docDetails.DOC_LINES" type="item-text-wrap" dir="RTL">
+                <a class="item item-divider item-icon-right" ng-click="toggleGroup(detail.ATTRIBUTE2)">
               <i class="icon ion-android-calendar"></i>
               <p class="float-right">מ : {{detail.ATTRIBUTE2}}</p>
               <p class="float-right tab">עד: {{detail.ATTRIBUTE3}}</p>
               <i ng-class="isGroupShown(detail.ATTRIBUTE2) ? 'icon-expand' : 'icon-collapse'"></i>
             </a>
-          <label class="item" ng-show="isGroupShown(detail.ATTRIBUTE2)">
+                <label class="item" ng-show="isGroupShown(detail.ATTRIBUTE2)">
             <div class="row">
               <div class="col col-30 text-right pele_rtl">סיבה העדרות : </div>
               <div class="col col-70 text-right pele_rtl" readonly="true" on-touch="openExistText(detail.ATTRIBUTE4)">
@@ -138,11 +138,11 @@
               </div>
             </div>
           </label>
-        </div>
-      </ul>
-     </ion-scroll>
-    </ion-slide>
-   </ion-slide-box>
+              </div>
+            </ul>
+          </ion-scroll>
+        </ion-slide>
+      </ion-slide-box>
   </ion-content>
   <!-- Footer Actions -->
   <ion-footer-bar align-title="right">
