--- a/www/app/apps/docApprove/RQ/p4_rq_doc_20002.html
+++ b/www/app/apps/docApprove/RQ/p4_rq_doc_20002.html
@@ -1,13 +1,13 @@
 <ion-view class="feed-entries-view">
 
-  <ion-nav-buttons side="right"  >
+  <ion-nav-buttons side="right">
     <button menu-toggle="left" class="button button-icon icon ion-navicon">
     </button>
   </ion-nav-buttons>
   <ion-nav-title>
-    <div class="bar bar-header bar-light">
+    <div class="bar bar-header bar-positive">
       <div class="title" id="logo">
-          דרישת רכש {{REQ_NUM}}
+        דרישת רכש {{REQ_NUM}}
         <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
     </div>
@@ -32,11 +32,11 @@
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
+        <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
+          <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
               <!--<div class="item item-divider "> -->
-              <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )"  ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; " >
+              <a class="item item-divider item-icon-right pele-item-icon-left" ng-hide="pelHideShow2( detail.DISPLAY_FLAG )" ng-click="detail.SHOW_FLAG = !detail.SHOW_FLAG; detail.PUSH_COUNT = PUSH_COUNT +1; ">
                 <!-- <i class="icon icon-left {{getApproveListActionIcon(detail.ACTION_CODE)}}"></i> -->
                 <!--<i ng-class="detail.SHOW_FLAG ? 'icon-collapse' : 'icon-expand'"></i>-->
                 <i ng-class="showIconCollapseInAcctionHistory(detail.SHOW_FLAG , detail.HIDEN_FLAG)"></i>
@@ -69,7 +69,7 @@
         <!------------------------------------------------------------------------------->
         <!----------------------------- Doc Details Slide ------------------------------->
         <!------------------------------------------------------------------------------->
-        <ion-slide>
+        <ion-slide on-drag-right="enable('drag')" on-drag-left="disable('drag')">
           <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <ul class="list">
               <div type="item-text-wrap" ng-click="PO_DETAILS_SHOW = !PO_DETAILS_SHOW">
@@ -88,15 +88,21 @@
                 <div class="col col-25 text-right pele_rtl"></div>
                 <div class="col col-25 text-right pele_rtl">{{REQ_FUNCTIONAL_CURRENCY_4}}</div>
                 <div class="col col-25 text-right pele_rtl">{{REQ_AMOUNT_DSP_3}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">סה"כ</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">סה"כ</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="PO_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{REQ_DESC_5}}</div>
-                <div class="col col-25 text-right pele_rtl"><p class="under">מקים דרישה</p></div>
+                <div class="col col-25 text-right pele_rtl">
+                  <p class="under">מקים דרישה</p>
+                </div>
               </div>
               <div class="pele-row" ng-show="PO_DETAILS_SHOW">
                 <div class="col col-75 text-right pele_rtl">{{REQ_CREATION_DATE_6}}</div>
-                <div class="col col-35 text-right pele_rtl"><p class="under">תאריך יצירה</p></div>
+                <div class="col col-35 text-right pele_rtl">
+                  <p class="under">תאריך יצירה</p>
+                </div>
               </div>
               <!--
               <div class="pele-row" ng-show="PO_DETAILS_SHOW">
@@ -114,7 +120,11 @@
               </div>
 
               <div class="pele-row" ng-show="PO_DETAILS_SHOW">
-                <table><tr><td>&nbsp</td></tr></table>
+                <table>
+                  <tr>
+                    <td>&nbsp</td>
+                  </tr>
+                </table>
               </div>
 
               <!------------------------------------------------>
@@ -127,11 +137,11 @@
                 </a>
               </div>
 
-              <div ng-repeat="ReqLinesInd in REQ_LINES_CUR" ng-show="PO_EXPLAIN_SHOW" >
-                  <div class="card">
-                    <div class="item item-divider text-right pele_rtl pele-item-icon-left" ng-click="ReqLinesInd.REQ_LINE_SHOW_FLAG = !ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <i ng-class="ReqLinesInd.REQ_LINE_SHOW_FLAG ? 'icon-expand' : 'icon-collapse'"></i>
-                      <i class="text-right pele_rtl under">
+              <div ng-repeat="ReqLinesInd in REQ_LINES_CUR" ng-show="PO_EXPLAIN_SHOW">
+                <div class="card">
+                  <div class="item item-divider text-right pele_rtl pele-item-icon-left" ng-click="ReqLinesInd.REQ_LINE_SHOW_FLAG = !ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <i ng-class="ReqLinesInd.REQ_LINE_SHOW_FLAG ? 'icon-expand' : 'icon-collapse'"></i>
+                    <i class="text-right pele_rtl under">
                         <table>
                           <tr>
                             <td>שורה</td>
@@ -144,52 +154,63 @@
                           </tr>
                         </table>
                       </i>
-                    </div>
+                  </div>
 
-                    <!-- <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                  <!-- <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
                       <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_LINE_DESC_8}}</div>
                       <div class="col col-25 text-right pele_rtl"><p class="under">פריט</p></div>
                     </div> -->
 
-                    <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_LINE_DESC_9}}</div>
-                      <div class="col col-25 text-right pele_rtl"><p class="under">פריט</p></div>
+                  <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_LINE_DESC_9}}</div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">פריט</p>
                     </div>
+                  </div>
 
-                    <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <div class="col col-17 text-right pele_rtl"></div>
-                      <div class="col col-25 text-right pele_rtl">{{ReqLinesInd.DFF_CURRENCY_CODE}}</div>
-                      <div class="col col-33 text-right pele_rtl">{{ReqLinesInd.REQ_PRICE_NETO_9}}</div>
-                      <div class="col col-25 text-right pele_rtl under"><p class="under">מחיר ליחידה</p></div>
+                  <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <div class="col col-17 text-right pele_rtl"></div>
+                    <div class="col col-25 text-right pele_rtl">{{ReqLinesInd.DFF_CURRENCY_CODE}}</div>
+                    <div class="col col-33 text-right pele_rtl">{{ReqLinesInd.REQ_PRICE_NETO_9}}</div>
+                    <div class="col col-25 text-right pele_rtl under">
+                      <p class="under">מחיר ליחידה</p>
                     </div>
+                  </div>
 
-                    <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <div class="col col-25 text-right pele_rtl"></div>
-                      <div class="col col-25 text-right pele_rtl"></div>
-                      <div class="col col-25 text-right pele_rtl">{{ReqLinesInd.REQ_QUANTITY_11}}</div>
-                      <div class="col col-25 text-right pele_rtl"><p class="under">כמות</p></div>
+                  <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <div class="col col-25 text-right pele_rtl"></div>
+                    <div class="col col-25 text-right pele_rtl"></div>
+                    <div class="col col-25 text-right pele_rtl">{{ReqLinesInd.REQ_QUANTITY_11}}</div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">כמות</p>
                     </div>
+                  </div>
 
-                    <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <div class="col col-17 text-right pele_rtl"></div>
-                      <div class="col col-25 text-right pele_rtl">{{ReqLinesInd.DFF_CURRENCY_CODE}}</div>
-                      <div class="col col-33 text-right pele_rtl">{{ReqLinesInd.REQ_UNIT_PRICE_13}}</div>
-                      <div class="col col-25 text-right pele_rtl"><p class="under">סה"כ לשורה</p></div>
+                  <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <div class="col col-17 text-right pele_rtl"></div>
+                    <div class="col col-25 text-right pele_rtl">{{ReqLinesInd.DFF_CURRENCY_CODE}}</div>
+                    <div class="col col-33 text-right pele_rtl">{{ReqLinesInd.REQ_UNIT_PRICE_13}}</div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">סה"כ לשורה</p>
                     </div>
+                  </div>
 
-                    <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_SUGGESTED_VENDOR_NAME_14}}</div>
-                      <div class="col col-25 text-right pele_rtl"><p class="under">ספק מומלץ</p></div>
+                  <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_SUGGESTED_VENDOR_NAME_14}}</div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">ספק מומלץ</p>
                     </div>
+                  </div>
 
-                    <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_TO_PERSON_FULL_NAME_16}}</div>
-                      <div class="col col-25 text-right pele_rtl"><p class="under">שם הדורש</p></div>
+                  <div class="row " ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <div class="col col-75 text-right pele_rtl">{{ReqLinesInd.REQ_TO_PERSON_FULL_NAME_16}}</div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">שם הדורש</p>
                     </div>
+                  </div>
 
-                    <div class="item item-text-wrap text-right pele_rtl" ng-repeat="ReqLineDocument in ReqLinesInd.REQ_LINES_ATTACHMENTS_CUR" ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
-                      <p ng-show="ReqLineDocument.DISPLAY_FLAG_1" class="under" ng-style="getAttachmentLinkStyle(ReqLineDocument.IS_FILE_OPENED_ON_MOBILE_10)"
-                                       ng-click="getAttachedDocumentRow(ReqLineDocument.CATEGORY_TYPE_4
+                  <div class="item item-text-wrap text-right pele_rtl" ng-repeat="ReqLineDocument in ReqLinesInd.REQ_LINES_ATTACHMENTS_CUR" ng-show="ReqLinesInd.REQ_LINE_SHOW_FLAG">
+                    <p ng-show="ReqLineDocument.DISPLAY_FLAG_1" class="under" ng-style="getAttachmentLinkStyle(ReqLineDocument.IS_FILE_OPENED_ON_MOBILE_10)" ng-click="getAttachedDocumentRow(ReqLineDocument.CATEGORY_TYPE_4
                                                                       , ReqLineDocument.DISPLAY_FLAG_1
                                                                       , ReqLineDocument.DOCUMENT_ID_2
                                                                       , ReqLineDocument.FILE_NAME_3
@@ -199,25 +220,24 @@
                                                                       , ReqLineDocument.IOS_FILE_NAME_12
                                                                       , ReqLineDocument.IS_FILE_OPENED_ON_MOBILE_10
                                                                       , ReqLineDocument.OPEN_FOLDER_5 )">
-                        {{ReqLineDocument.FILE_NAME_3}}
-                      </p>
-                    </div>
+                      {{ReqLineDocument.FILE_NAME_3}}
+                    </p>
                   </div>
+                </div>
               </div>
 
               <!-- Budget Requisition Lines -->
-              <div type="item-text-wrap" ng-click="RQ_BUDGET_SHOW = !RQ_BUDGET_SHOW; toggleBudgetCardShown('budgetCard')" >
+              <div type="item-text-wrap" ng-click="RQ_BUDGET_SHOW = !RQ_BUDGET_SHOW; toggleBudgetCardShown('budgetCard')">
                 <a class="item item-divider item-icon-right">
                   <h2 class="text-right pele_rtl">תקציב</h2>
                   <i class="icon ion-clipboard"></i>
                 </a>
               </div>
 
-              <div ng-repeat="ReqBudgetLinesInd in REQ_BUDGET_CUR" ng-show="RQ_BUDGET_SHOW" >
+              <div ng-repeat="ReqBudgetLinesInd in REQ_BUDGET_CUR" ng-show="RQ_BUDGET_SHOW">
                 <div class="card" id="budgetCard">
 
-                  <div class="item item-divider text-right pele_rtl pele-item-icon-left"
-                       ng-click="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG = !ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG; toggleBudgetShown(ReqBudgetLinesInd)">
+                  <div class="item item-divider text-right pele_rtl pele-item-icon-left" ng-click="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG = !ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG; toggleBudgetShown(ReqBudgetLinesInd)">
                     <i ng-class="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG ? 'icon-expand' : 'icon-collapse'"></i>
                     <i class="text-right pele_rtl under">
                        <table>
@@ -234,29 +254,39 @@
 
                   <div class="row" id="{{ReqBudgetLinesInd.BUDGET_LINE_NUM}}" ng-show="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG">
                     <div class="col col-75 text-right pele_rtl">{{ReqBudgetLinesInd.REQ_DEP_1}}</div>
-                    <div class="col col-25 text-right pele_rtl"><p class="under">מחלקה</p></div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">מחלקה</p>
+                    </div>
                   </div>
 
                   <div class="row " ng-show="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG">
                     <div class="col col-75 text-right pele_rtl">{{ReqBudgetLinesInd.REQ_BUDGET_2}}</div>
-                    <div class="col col-25 text-right pele_rtl"><p class="under">סעיף תקציבי</p></div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">סעיף תקציבי</p>
+                    </div>
                   </div>
 
                   <div class="row " ng-show="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG">
                     <div class="col col-75 text-right pele_rtl">{{ReqBudgetLinesInd.REQ_SUB_BUDGET_3}}</div>
-                    <div class="col col-25 text-right pele_rtl"><p class="under">תת סעיף תקציבי</p></div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">תת סעיף תקציבי</p>
+                    </div>
                   </div>
 
                   <div class="row " ng-show="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG">
                     <div class="col col-40 text-right pele_rtl">שח</div>
                     <div class="col col-35 text-right pele_rtl">{{ReqBudgetLinesInd.TOT_GRP_DISTR_ENC_AMOUNT | currency : ''}}</div>
-                    <div class="col col-25 text-right pele_rtl"><p class="under">סכום להפצה</p></div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">סכום להפצה</p>
+                    </div>
                   </div>
 
                   <div class="row " ng-show="ReqBudgetLinesInd.BUDGET_LINE_SHOW_FLAG">
                     <div class="col col-40 text-right pele_rtl">שח</div>
                     <div class="col col-35 text-right pele_rtl">{{ReqBudgetLinesInd.TOT_GRP_DISTR_ENC_AMOUNT | currency : ''}}</div>
-                    <div class="col col-25 text-right pele_rtl"><p class="under">סכום משוריין</p></div>
+                    <div class="col col-25 text-right pele_rtl">
+                      <p class="under">סכום משוריין</p>
+                    </div>
                   </div>
                 </div>
               </div>
