--- a/www/app/apps/docApprove/HR/p4_doc_806.html
+++ b/www/app/apps/docApprove/HR/p4_doc_806.html
@@ -6,7 +6,7 @@
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <div class="title" id="logo">טופס דיווח עבודה מהבית
+      <div class="title" id="logo">דיווח עבודה מהבית
         <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
       </div>
     </div>
@@ -14,7 +14,7 @@
 
   <ion-content scroll="false">
     <div ng-if="0" class="pele-page-title pele-img-size pele-page-title-font">
-      <a class="description">טופס דיווח עבודה מהבית</a>
+      <a class="description">דיווח עבודה מהבית</a>
     </div>
     <tab-slide-box>
       <div class="tsb-icons">
