--- a/www/app/apps/docApprove/HR/p4_doc_807.html
+++ b/www/app/apps/docApprove/HR/p4_doc_807.html
@@ -31,32 +31,7 @@
         <!-------------------------------------------------------------------------------->
         <!----------------------------- Approve List Slide ------------------------------->
         <!-------------------------------------------------------------------------------->
-        <!--
-        <ion-slide>
-          <ion-scroll style="height:80%" delegate-handle="slide1Scroll" >
-          <div ng-repeat="detail in docDetails.ACTION_HISTORY" type="item-text-wrap" dir="RTL">
-            <a class="item item-divider item-icon-right">
-              <i class="icon ion-android-contact"></i>
-              <p class="text-right pele_rtl">{{detail.USER_NAME}}</p>
-            </a>
-            <label class="item" ng-hide="pelHideShow(detail.ACTION , detail.NOTE)">
-              <div class="row">
-                <div class="col text-right pele_rtl">פעולה : </div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">ת. פעולה : </div>
-                <div class="col col-75 text-right pele_rtl">{{detail.ACTION_DATE}}</div>
-              </div>
-              <div class="row">
-                <div class="col text-right pele_rtl">הערות : </div>
-                <textarea class="col col-75 text-right pele_rtl" readonly="true">{{detail.ACTION_NOTE}}</textarea>
-              </div>
-            </label>
-          </div>
-            </ion-scroll>
-        </ion-slide>
-        -->
+
         <ion-slide on-drag-left="enable('drag')" on-drag-right="disable('drag')">
           <ion-scroll style="height:80%" delegate-handle="slide1Scroll">
             <div ng-repeat="detail in ACTION_HISTORY" type="item-text-wrap" dir="RTL">
@@ -99,13 +74,18 @@
             <!-- Refresh to get the new posts -->
 
             <label class="item item-thumbnail-left">
+
               <img src="img/employees/worker.png">
-              <h2 class="text-right pele_rtl">שם : {{CREATOR}}</h2>
-              <h2 class="text-right pele_rtl">ת.ז. : {{EMP_NUMBER}}</h2>
-              <h2 class="text-right pele_rtl">מספר טופס : {{DOC_INIT_ID}}</h2>
-              <h2 class="text-right pele_rtl">ת. יצירה : {{SENT_DATE}}</h2>
-              <h2 class="text-right pele_rtl">מחלקה : {{DEPARTMENT}}</h2>
-              <h2 class="text-right pele_rtl">חטיבה : {{SECTOR}}</h2>
+              <table class="pele_rtl text-right">
+                <tbody>
+                  <tr><td class="label">שם: </td><td class="info"> {{CREATOR}}</td></tr>
+                  <tr><td class="label">ת.ז.: </td><td class="info"> {{EMP_NUMBER}}</td></tr>
+                  <tr><td class="label">מספר טופס: </td><td class="info"> {{DOC_INIT_ID}}</td></tr>
+                  <tr><td class="label">ת. יצירה: </td><td class="info"> {{SENT_DATE}}</td></tr>
+                  <tr><td class="label">מחלקה: </td><td class="info"> {{DEPARTMENT}}</td></tr>
+                  <tr><td class="label">חטיבה: </td><td class="info"> {{SECTOR}}</td></tr>
+                </tbody>
+              </table>
             </label>
             <ul class="list">
               <label class="item" dir="RTL">
@@ -124,17 +104,25 @@
               <p class="float-right tab">עד: {{detail.ATTRIBUTE3}}</p>
               <i ng-class="isGroupShown(detail.ATTRIBUTE2) ? 'icon-expand' : 'icon-collapse'"></i>
             </a>
+
+
                 <label class="item" ng-show="isGroupShown(detail.ATTRIBUTE2)">
-            <div class="row">
-              <div class="col col-30 text-right pele_rtl">סיבה העדרות : </div>
-              <div class="col col-70 text-right pele_rtl" readonly="true" on-touch="openExistText(detail.ATTRIBUTE4)">
-                <p class="under" style="color:blue">{{detail.ATTRIBUTE4}}</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col col-30 text-right pele_rtl">הערה : </div>
-              <div class="col col-70 text-right pele_rtl" readonly="true" on-touch="openExistText(detail.ATTRIBUTE5)">
-                <p class="under" style="color:blue">{{detail.ATTRIBUTE5}}</p>
+              <div class="row">
+                <div class="col">
+                  <table class="pele_rtl text-right">
+                    <tbody>
+                  <tr>
+                    <td class="label">סיבת אי דיווח : </td>
+                    <td class="info">{{detail.ATTRIBUTE4}}</td>
+                  </tr>
+                  <tr>
+                    <td class="label">הערה : </td>
+                    <td class="info">
+                      {{detail.ATTRIBUTE5}}
+                    </td>
+                  </tr>
+                </tbody>
+                </table>
               </div>
             </div>
           </label>
