--- a/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
+++ b/www/app/apps/docApprove/INI/p4_ini_doc_30002.html
@@ -6,8 +6,7 @@
   </ion-nav-buttons>
   <ion-nav-title>
     <div class="bar bar-header bar-positive">
-      <div class="title" id="logo"> מסמך יזום {{INI_DOC_INIT_ID}}
-        <!--<img src="img/DocApprove/logo.png" style="max-width: 100%;  height: 100%;"/>-->
+      <div class="title"> מסמך יזום {{INI_DOC_INIT_ID}}
       </div>
     </div>
   </ion-nav-title>
