--- a/www/index.html
+++ b/www/index.html
@@ -9,7 +9,7 @@
   <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; script-src 'self' 'unsafe-inline' 'unsafe-eval' *; style-src  'self' 'unsafe-inline' *"> -->
   <title></title>
 
-  <link href="lib/ionic/css/ionic.css" rel="stylesheet">
+  <link href="lib/ionic/css/ionic.min.css" rel="stylesheet">
   <link href="css/pele_style.css" rel="stylesheet">
   <link href="css/ionic.app.css" rel="stylesheet">
   <!-- R.W. 11/10/2015 -->
